IGNITE-6734: Replaced sun.misc.BASE64Encoder with standard Java 8 encoder.