@@ -20,9 +20,11 @@ package org.apache.ignite.internal.processors.rest.protocols;
 import java.io.IOException;
 import java.net.InetAddress;
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.StringTokenizer;
@@ -35,7 +37,6 @@ import org.apache.ignite.internal.util.typedef.F;
 import org.apache.ignite.internal.util.typedef.internal.U;
 import org.apache.ignite.lang.IgniteBiTuple;
 import org.jetbrains.annotations.Nullable;
-import sun.misc.BASE64Encoder;
 
 /**
  * Abstract protocol adapter.
@@ -106,11 +107,11 @@ public abstract class GridRestProtocolAdapter implements GridRestProtocol {
         try {
             MessageDigest md = MessageDigest.getInstance("SHA-1");
 
-            BASE64Encoder enc = new BASE64Encoder();
+            Base64.Encoder enc = Base64.getEncoder();
 
             md.update(s.getBytes(UTF_8));
 
-            String compHash = enc.encode(md.digest());
+            String compHash = new String(enc.encode(md.digest()), StandardCharsets.ISO_8859_1) ;
 
             return hash.equalsIgnoreCase(compHash);
         }
